[package]
name = "nostr-publish"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/madcato/nostr-article-publish"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
nostr-sdk = "0.42.0"
regex = "1.11.1"
serde = "1.0.219"
serde_yaml = "0.9.33"
tokio = "1.46.1"
toml = "0.9.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
